# Ratspeak

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-desktop.yml  ci.yml  release-android.yml  release-desktop.yml  release-ios.yml  release-macos.yml  release-windows.yml
crates/ratspeak-core/: Cargo.toml
crates/ratspeak-core/src/: config.rs  emitter.rs  errors.rs  lib.rs  notification.rs  radio.rs  types.rs
crates/ratspeak-db/: Cargo.toml  nodes.json
crates/ratspeak-db/src/: db.rs  lib.rs  static_nodes.rs
crates/ratspeak-runtime/: Cargo.toml
crates/ratspeak-runtime/src/: announce_handlers.rs  blackhole.rs  hardware.rs  helpers.rs  identity_prune.rs  lib.rs  lxmf.rs  messaging.rs  platform_ios.rs  propagation.rs  rns.rs  rns_config.rs  state.rs  vault.rs  voice.rs
crates/ratspeak-tauri/: Cargo.toml  build.rs
crates/ratspeak-tauri/src/: config.rs  emitter.rs  error.rs  lib.rs  notifier.rs
crates/ratspeak-tauri/tests/: db_concurrency.rs  source_contracts.rs
dashboard/: build-css.sh  index.html
dashboard/static/css/: 00-tokens.css  01-reset.css  02-typography.css  03-scrollbar.css  04-layout.css  05-panels.css  06-forms.css  07-components.css  08-modals.css  09-messaging.css  (+4 more)
scripts/release/: assert-no-tauri-dev-url.sh  setup-android-signing.sh
src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  haptics-mobile.json  ratspeak.json
src-tauri/icons/: icon-dark.icns  icon.icns
src-tauri/loading/: index.html
src-tauri/src/: lib.rs  main.rs  paths.rs
(+49 files in other folders)
